CMakePM: Do not force Kit's Qt version as projects Qt version

Amends c6d1c962ee778263c8f17f9aa5b521dbef1fdbc9

Fixes: QTCREATORBUG-30712
Change-Id: I1d78d108a7566f4f59ff0f479eb4b5eddb8a986f
Reviewed-by: Christian Stenger <christian.stenger@qt.io>