src/plugins/cmakeprojectmanager/cmakebuildsystem.cpp
@@ -1354,12 +1354,10 @@ void CMakeBuildSystem::updateProjectData()
         return QtMajorVersion::None;
     };
 
-    QtMajorVersion qtVersion = kitInfo.projectPartQtVersion;
-    if (qtVersion == QtMajorVersion::None)
-        qtVersion = qtVersionFromCMake({{QtMajorVersion::Qt6, {"Qt6", "Qt6Core"}},
-                                        {QtMajorVersion::Qt5, {"Qt5", "Qt5Core"}},
-                                        {QtMajorVersion::Qt4, {"Qt4", "Qt4Core"}}
-                                       });
+    QtMajorVersion qtVersion = qtVersionFromCMake(
+        {{QtMajorVersion::Qt6, {"Qt6", "Qt6Core"}},
+         {QtMajorVersion::Qt5, {"Qt5", "Qt5Core"}},
+         {QtMajorVersion::Qt4, {"Qt4", "Qt4Core"}}});
 
     QString errorMessage;
     RawProjectParts rpps = m_reader.createRawProjectParts(errorMessage);
@@ -1368,7 +1366,7 @@ void CMakeBuildSystem::updateProjectData()
     qCDebug(cmakeBuildSystemLog) << "Raw project parts created." << errorMessage;
 
     for (RawProjectPart &rpp : rpps) {
-        rpp.setQtVersion(qtVersion); // TODO: Check if project actually uses Qt.
+        rpp.setQtVersion(qtVersion);
         const FilePath includeFileBaseDir = buildConfiguration()->buildDirectory();
         QStringList cxxFlags = rpp.flagsForCxx.commandLineFlags;
         QStringList cFlags = rpp.flagsForC.commandLineFlags;
